# church_mrm

./: README.md  pyproject.toml
church_mrm/: hooks.py  install.py  modules.txt  tasks.py
church_mrm/api/: origins_chat.py  photo_editor.py  youtube.py
church_mrm/church_mrm/dashboard_chart/donations_this_year/: donations_this_year.json
church_mrm/church_mrm/doctype/ai_conversation/: ai_conversation.json  ai_conversation.py
church_mrm/church_mrm/doctype/ai_message/: ai_message.json
church_mrm/church_mrm/doctype/ai_settings/: ai_settings.json  ai_settings.py
church_mrm/church_mrm/doctype/church_event/: church_event.json  church_event.py
church_mrm/church_mrm/doctype/church_group/: church_group.json  church_group.py
church_mrm/church_mrm/doctype/church_group_member/: church_group_member.json  church_group_member.py
church_mrm/church_mrm/doctype/church_member/: church_member.js  church_member.json  church_member.py
church_mrm/church_mrm/doctype/church_member_household/: church_member_household.json  church_member_household.py
church_mrm/church_mrm/doctype/church_relationship/: church_relationship.json  church_relationship.py
church_mrm/church_mrm/doctype/pledge/: pledge.json  (+1 more)
church_mrm/config/: desktop.py
church_mrm/overrides/: contact.py
church_mrm/public/css/: church_mrm.css  photo_editor.css
church_mrm/public/js/: church_mrm.js  contact.js  photo_editor.js  website.js
church_mrm/www/: church_events.html  church_events.py  donate.html  donate.py  gallery.html  gallery.py  membership_signup.html  membership_signup.py  origins.html  origins.py
(+44 files in other folders)
